--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+package-lock.json
+yarn.lock
 
 # Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # IDE
 .vscode/
@@ -22,9 +18,12 @@ yarn-error.log*
 .DS_Store
 Thumbs.db
 
-# Build outputs
+# Logs
+*.log
+npm-debug.log*
+
+# Build files
 dist/
 build/
-.vercel/
-
+.vercel
 
